--- a/main.html
+++ b/main.html
@@ -6,11 +6,11 @@
 		<title>MyCanvas</title>
 
 		<script type="text/javascript" src="lib/Snap.svg-0.2.0/dist/snap.svg-min.js"></script>
-		<script type="text/javascript" src="mycanvas.js"></script>
+		<script type="text/javascript" src="js/mycanvas.js"></script>
 		
 	</head>
 	<body>
-		<svg id="demo" version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="490px" height="490px" viewBox="0 0 490 490" enable-background="new 0 0 490 490" xml:space="preserve">
+		<svg id="mycanvas" version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1280px" height="780px" xml:space="preserve">
 		</svg>
 	</body>
 </html>
