--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>MyCanvas</title>
 
-		<script type="text/javascript" src="lib/Snap.svg-0.2.0/dist/snap.svg-min.js"></script>
+		<script type="text/javascript" src="js/snap.svg-min.js"></script>
 		<script type="text/javascript" src="js/mycanvas.js"></script>
 		
 	</head>
