--- a/main.html
+++ b/main.html
@@ -3,14 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width">
 		<title>MyCanvas</title>
 
 		<script type="text/javascript" src="js/snap.svg-min.js"></script>
+		<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 		<script type="text/javascript" src="js/mycanvas.js"></script>
 		
 	</head>
 	<body>
-		<svg id="mycanvas" version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1280px" height="780px" xml:space="preserve">
+		<svg id="mycanvas">
 		</svg>
 	</body>
 </html>
