--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>MyCanvas</title>
 
 		<script type="text/javascript" src="js/snap.svg-min.js"></script>
+		<script type="text/javascript" src="js/raphael-min.js"></script>
 		<script type="text/javascript" src="js/MAST_1.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="css/mast_1.css">
