Creación animacion PETERCOBO_04

--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width">
 		<title>MyCanvas</title>
-
-		<script type="text/javascript" src="js/snap.svg-min.js"></script>
-		<script type="text/javascript" src="js/MAST_1.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="css/mast_1.css">
 	</head>
 	<body>
-		<svg version="1.1" id="mycanvas" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="404px" height="439px" viewBox="0 0 404 439" enable-background="new 0 0 404 439" xml:space="preserve">
-		</svg>
+			<a href="MAST_1.html">MAST_1</a><br />
+			<a href="PETERCOBO_04.html">PETERCOBO_04</a>
 	</body>
 </html>
