--- a/main.html
+++ b/main.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width">
 		<title>MyCanvas</title>
 
-		<script type="text/javascript" src="js/snap.svg-min.js"></script>
-		<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+		<script type="text/javascript" src="lib/Snap.svg-0.2.0/dist/snap.svg-min.js"></script>
+		<script type="text/javascript" src="lib/jquery-1.11.1.min.js"></script>
 		<script type="text/javascript" src="js/mycanvas.js"></script>
 		
 	</head>
