--- a/PETERCOBO_01.html
+++ b/PETERCOBO_01.html
@@ -10,7 +10,8 @@
 		<script type="text/javascript" src="js/PETERCOBO_01.js"></script>
 	</head>
 	<body>
-		<svg version="1.1" id="petercobo_01" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="320px" height="372px" viewBox="0 0 320 372" enable-background="new 0 0 320 372" xml:space="preserve">
+        <button id="play">Play</button><button id="pause">Pause</button><button id="resume">Resume</button>
+		<svg version="1.1" id="petercobo_01" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="10px" width="320px" height="372px" viewBox="0 0 320 372" enable-background="new 0 0 320 372" xml:space="preserve" preserveAspectRatio="none">
 		</svg>
 	</body>
 </html>
