--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<body>
 			<a href="MAST_1.html">MAST_1</a><br />
 			<a href="PETERCOBO_01.html">PETERCOBO_01</a><br />
+			<a href="PETERCOBO_03.html">PETERCOBO_03</a><br />
 			<a href="PETERCOBO_04.html">PETERCOBO_04</a>
 	</body>
 </html>
