--- a/PETERCOBO_04.html
+++ b/PETERCOBO_04.html
@@ -7,12 +7,11 @@
 		<title>PETERCOBO 04</title>
 
 		<script type="text/javascript" src="lib/Snap.svg-0.2.0/dist/snap.svg-min.js"></script>
+		<script type="text/javascript" src="lib/jquery-1.11.1.min.js"></script>
 		<script type="text/javascript" src="js/PETERCOBO_04.js"></script>
-        
-		<link rel="stylesheet" type="text/css" href="css/petercobo_04.css">
 	</head>
 	<body>
-		<button id="play">Play</button><button id="pause">Pause</button><button id="resume">Resume</button>
+		<button id="play">Play</button><button id="pause">Pause</button><button id="resume">Resume</button><br/>
 		<svg version="1.1" id="petercobo_04" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="320px" height="372px"  viewBox="0 0 320 372" enable-background="new 0 0 320 372" xml:space="preserve" preserveAspectRatio="none">
 		</svg>
 	</body>
