--- a/PETERCOBO_03.html
+++ b/PETERCOBO_03.html
@@ -10,7 +10,24 @@
 		<script type="text/javascript" src="js/PETERCOBO_03.js"></script>
 	</head>
 	<body>
+        <button id="play">Play</button><button id="pause">Pause</button><button id="resume">Resume</button><br />
 		<svg version="1.1" id="petercobo_03" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="320px" height="372px" viewBox="0 0 320 372" enable-background="new 0 0 320 372" xml:space="preserve">
+            <!--<path id="eyelids" d="M 316.675,186 Q 271.304,186 160,186 Q 48.697,186 3.326,186 Q 48.697,186 160,186 Q 271.304,186 316.675,186" fill="#1CA9C9" stroke="#000000" stroke-width="5" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10">
+                <animate
+                    id            = "blink"
+                    attributeType = "XML"
+                    attributeName = "d"
+                    from          = "M 316.675,186 Q 271.304,186 160,186 Q 48.697,186 3.326,186 Q 48.697,186 160,186 Q 271.304,186 316.675,186"
+                    to            = "M 316.675,186 Q 271.304,106.5 160,106.5 Q 48.697,106.5 3.326,186 Q 48.697,265.5 160,265.5 Q 271.304,265.5 316.675,186"
+                    begin         = "0s; 4s; 8s"
+                    dur           = "3.5s"
+                />
+            </path>
+            
+            <text x="271.304" y="106.5">A</text>
+            <text x="160" y="106.5">B</text>
+            
+            M3.326,186c0,0,45.371,79.5,156.674,79.5S316.675,186,316.675,186S271.304,106.5,160,106.5S3.326,186,3.326,186z-->
 		</svg>
 	</body>
 </html>
