--- a/ATTITUDE_3.html
+++ b/ATTITUDE_3.html
@@ -7,11 +7,14 @@
 		<title>PETERCOBO 01</title>
 
 		<script type="text/javascript" src="lib/Snap.svg-0.2.0/dist/snap.svg-min.js"></script>
-		<script type="text/javascript" src="js/ATTITUDE_3.js"></script>
+		<!--<script type="text/javascript" src="js/ATTITUDE_3.js"></script>-->
 	</head>
 	<body>
         <button id="play">Play</button><button id="pause">Pause</button><button id="resume">Resume</button><br />
 		<svg version="1.1" id="attitude_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="320px" height="372px" viewBox="0 0 320 372" enable-background="new 0 0 320 372" xml:space="preserve">
+			<path id="bordeOjo" d="M154.669,210.93c-15.999,0-28.7-12.719-29.232-13.261l-1.062-1.079l1.062-1.079c0.532-0.542,13.233-13.26,29.232-13.26 s28.7,12.718,29.232,13.26l1.062,1.079l-1.062,1.079C183.369,198.211,170.668,210.93,154.669,210.93z M128.793,196.59 c3.393,3.009,13.803,11.262,25.876,11.262s22.482-8.253,25.876-11.262c-3.394-3.009-13.803-11.261-25.876-11.261 S132.186,193.581,128.793,196.59z"/>
+
+
 		</svg>
 	</body>
 </html>
