--- a/ATTITUDE_3.html
+++ b/ATTITUDE_3.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width">
-		<title>PETERCOBO 01</title>
+		<title>ATTITUDE 03</title>
 
 		<script type="text/javascript" src="lib/Snap.svg-0.2.0/dist/snap.svg-min.js"></script>
 		<script type="text/javascript" src="js/ATTITUDE_3.js"></script>
